[Android Site Settings] Disable fetching important sites when not needed.

Important sites could be a performance hit, especially because it might
hit disk w/ content settings querying, enumerating all bookmarks, etc.
This change lets you disable that.

BUG=732907

Review-Url: https://codereview.chromium.org/2953853002
Cr-Commit-Position: refs/heads/master@{#481758}

Former-commit-id: 226c79833104ddfbceeb6e866a3f532c7c1fec77