chrome/android/java/src/org/chromium/chrome/browser/preferences/website/ManageSpaceActivity.java
@@ -303,7 +303,7 @@ public class ManageSpaceActivity extends AppCompatActivity implements View.OnCli
          * asynchronously, and at the end we update the UI with the new storage numbers.
          */
         public void clearData() {
-            WebsitePermissionsFetcher fetcher = new WebsitePermissionsFetcher(this);
+            WebsitePermissionsFetcher fetcher = new WebsitePermissionsFetcher(this, true);
             fetcher.fetchPreferencesForCategory(
                     SiteSettingsCategory.fromString(SiteSettingsCategory.CATEGORY_USE_STORAGE));
         }
